modified all codes

--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -8,6 +8,8 @@
 <h2>Stylist Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
+<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Phone)</h3>
+<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Date)</h3>
 
 <ul>
 @if (@Model.Clients.Count == 0)
@@ -18,6 +20,8 @@
 @foreach (Client client in @Model.Clients)
 {
   <li>Description: @client.Description</li>
+  <li>Name: @client.Name</li>
+  
 }
 </ul>
 
