--- a/HairSalon/Views/Stylists/Edit.cshtml
+++ b/HairSalon/Views/Stylists/Edit.cshtml
@@ -14,6 +14,10 @@
 
     @Html.LabelFor(model => model.Name)
     @Html.EditorFor(model => model.Name)
+    @Html.LabelFor(model => model.Phone)
+    @Html.EditorFor(model => model.Phone)
+    @Html.LabelFor(model => model.Date)
+    @Html.EditorFor(model => model.Date)
 
     <input type="submit" value="Save" />
 }
