--- a/HairSalon/Views/Clients/Create.cshtml
+++ b/HairSalon/Views/Clients/Create.cshtml
@@ -4,11 +4,13 @@
 
 @model HairSalon.Models.Client
 
-<h4>Add a new task</h4>
+<h4>Add a new client</h4>
 @using (Html.BeginForm())
 {
     @Html.LabelFor(model => model.Description)
     @Html.TextBoxFor(model => model.Description)
+    @Html.LabelFor(model => model.Name)
+    @Html.TextBoxFor(model => model.Name)
     
     @Html.LabelFor(model => model.Stylist)
     @Html.DropDownList("StylistId")
