--- a/HairSalon/Views/Clients/Edit.cshtml
+++ b/HairSalon/Views/Clients/Edit.cshtml
@@ -7,6 +7,7 @@
 <h2>Edit</h2>
 
 <h4>Edit this task: @Html.DisplayFor(model => model.Description)</h4>
+<h4>Edit this task: @Html.DisplayFor(model => model.Name)</h4>
 
 @using (Html.BeginForm())
 {
@@ -14,6 +15,8 @@
 
     @Html.LabelFor(model => model.Description)
     @Html.EditorFor(model => model.Description)
+    @Html.LabelFor(model => model.Name)
+    @Html.EditorFor(model => model.Name)
 
     @Html.LabelFor(model => model.Stylist)
     @Html.DropDownList("StylistId")
