--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 @using HairSalon.Models;
+
 @model List<HairSalon.Models.Client>;
 
 <h1>Clients</h1>
@@ -14,8 +15,8 @@
 
 @foreach (Client client in Model)
 {
-  <li>@Html.ActionLink($"{client.Description}", "Details", new { id = client.ClientId }) | @client.Stylist.Name</li>
+  <li>@Html.ActionLink($"{client.Name}", "Details", new { id = client.ClientId })</li>
 }
 
 <p>@Html.ActionLink("Add new client", "Create")</p>
-<p>@Html.ActionLink("Back home", "Index")</p>
+<p>@Html.ActionLink("Back home", "Index", "Home")</p>
